--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^2.0.2",
+    "vue-moment": "^3.2.0",
+    "vue-router": "^3.0.1",
+    "vuechart": "^18.3.13",
+    "vuetify": "^1.0.13"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -41,6 +46,7 @@
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
