--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "chart.js": "^2.7.2",
+    "pusher-js": "^4.2.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-chartjs": "^3.3.1",
