--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "vue-chartjs": "^3.3.1",
     "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.9.7",
     "vuetify": "^1.0.13"
   },
   "devDependencies": {
