--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,26 @@
+asn1crypto==0.24.0
+certifi==2018.1.18
+cffi==1.11.5
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==2.2.2
 Django==2.0.1
+django-rest-swagger==2.2.0
 djangorestframework==3.7.7
+idna==2.6
+itypes==1.1.0
+Jinja2==2.10
+MarkupSafe==1.0
+ndg-httpsclient==0.4.4
+openapi-codec==1.3.2
+pusher==1.7.4
+pyasn1==0.4.2
+pycparser==2.18
+pyOpenSSL==17.5.0
+pytz==2018.4
+requests==2.18.4
+simplejson==3.15.0
+six==1.11.0
+uritemplate==3.0.0
+urllib3==1.22
