--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,8 +18,10 @@ pusher==1.7.4
 pyasn1==0.4.2
 pycparser==2.18
 pyOpenSSL==17.5.0
+python-dateutil==2.7.3
 pytz==2018.4
-requests==2.18.4
+PyYAML==3.12
+requests==2.9.1
 simplejson==3.15.0
 six==1.11.0
 uritemplate==3.0.0
